# rust-wasm-token-counter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  nginx.conf
public/: index.html  worker.js
src/: lib.rs
